[gd_scene load_steps=2 format=3 uid="uid://sqceh4074au1"]

[ext_resource type="Script" path="res://menus/game_over_menu.gd" id="1_cf0yw"]

[node name="GameOverMenu" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
script = ExtResource("1_cf0yw")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(64, 16)
layout_mode = 2
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LoadButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Load Game"

[node name="MainMenuButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[connection signal="pressed" from="CenterContainer/VBoxContainer/LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
